fixed layout issue on tablet

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,36 +23,36 @@ footer {
     }
   }}
 /* mobile first */
-body {
+/* body {
   background: red;
-}
+} */
 /* sm */
-@media only screen and (min-width: 640px) {
+/* @media only screen and (min-width: 640px) {
   body {
     background: yellow;
   }
-}
+} */
 /* md */
-@media only screen and (min-width: 768px) {
+/* @media only screen and (min-width: 768px) {
   body {
     background: pink;
   }
-}
+} */
 /* lg */
-@media only screen and (min-width: 1024px) {
+/* @media only screen and (min-width: 1024px) {
   body {
     background: green;
   }
-}
+} */
 /* xl */
-@media only screen and (min-width: 1280px) {
+/* @media only screen and (min-width: 1280px) {
   body {
     background: purple;
   }
-}
+} */
 /* 2xl */
-@media only screen and (min-width: 1536px) {
+/* @media only screen and (min-width: 1536px) {
   body {
     background: orange;
   }
-}
+} */
